<?xml version="1.0" encoding="utf-8"?>


    <LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="manillas_xyz.com.manillas_xyz.MainActivity">

        <TextView
            android:id="@+id/lbl_titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lbl_titulo"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="36sp"
            android:textStyle="bold" />

    <Spinner
        android:id="@+id/cmbMaterial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/cmbDije"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Spinner
        android:id="@+id/cmbTipo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/txtCantidad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txtCantidad"
        android:inputType="number"
        android:textAlignment="viewStart"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/lblMoneda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/moneda"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <RadioButton
                android:id="@+id/rdCOP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cop" />

            <RadioButton
                android:id="@+id/rdUSD"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/usd" />
        </RadioGroup>

    </LinearLayout>

    <Button
        android:id="@+id/btnCalcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnCalcular" />

    <TextView
        android:id="@+id/lblTotal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="textStart"
        android:textColor="@android:color/holo_green_light"
        android:textSize="18sp"
        android:textStyle="bold" />

</LinearLayout>
